<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingActivity"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imagenLogin"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/loginimg"

        app:layout_constraintBottom_toTopOf="@+id/guiaHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginBottom="@dimen/margin_bottom_form_element"
        android:drawableStart="@drawable/mail_icon"
        android:hint="@string/email_placeholder"
        android:inputType="text"
        android:drawablePadding="16dp"

        android:id="@+id/editMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/imagenLogin"
        app:layout_constraintStart_toStartOf="@+id/imagenLogin"
        app:layout_constraintTop_toTopOf="@+id/guiaHorizontal" />

    <EditText
        android:layout_marginBottom="@dimen/margin_bottom_form_element"
        android:drawableStart="@drawable/pass_icon"
        android:drawablePadding="16dp"
        android:inputType="textPassword"
        android:hint="@string/pswd_placeholder"

        android:id="@+id/editPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/editMail"
        app:layout_constraintStart_toStartOf="@+id/editMail"
        app:layout_constraintTop_toBottomOf="@+id/editMail" />

    <Spinner
        android:layout_marginBottom="@dimen/margin_bottom_form_element"
        android:id="@+id/spinnerPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/editPass"
        app:layout_constraintStart_toStartOf="@+id/editPass"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <CheckBox
        android:layout_marginBottom="@dimen/margin_bottom_form_element"
        android:text="@string/ckbx_txt"
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPerfil"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPerfil" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guiaVertical"
        app:layout_constraintStart_toStartOf="@+id/spinnerPerfil"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <Button
        android:id="@+id/botonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkbox"
        app:layout_constraintStart_toStartOf="@+id/guiaVertical"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaHorizontal"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaVertical"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>